src/objects/QIPP_BU_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Achieved_Amount__c</fullName>
        <label>Achieved Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achieved_Financial_Savings_k__c</fullName>
        <description>Achieved Amount</description>
        <formula>IF(ISBLANK(Achieved_Amount__c),0,IF( Benefit_Type__c = &apos;Financial Savings&apos;, Round(Value(Achieved_Amount__c),2), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achieved Financial Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Operational_Savings_k__c</fullName>
        <formula>IF(ISBLANK(Achieved_Amount__c),0,IF( Benefit_Type__c = &apos;Operational Savings&apos;, Round(Value(Achieved_Amount__c),2), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achieved Operational Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Projected_Savings_k__c</fullName>
        <formula>IF(ISBLANK(Achieved_Amount__c),0,IF( Benefit_Type__c = &apos;Projected Revenue&apos;, Round(Value(Achieved_Amount__c),2), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achieved Projected Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Realized_Savings_k__c</fullName>
        <formula>IF(ISBLANK(Achieved_Amount__c),0,IF( Benefit_Type__c = &apos;Realized Revenue&apos;, Round(Value(Achieved_Amount__c),2), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achieved Realized Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Belt_Project_Type__c</fullName>
        <label>Belt Project Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Condition__c</fullName>
        <label>Benefit Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_ID__c</fullName>
        <label>Benefit ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Phase__c</fullName>
        <label>Benefit Phase</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Savings_Amount__c</fullName>
        <label>Benefits Saving Amount Future (k€)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <label>Benefit Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefits_Saving_Amount_Achieved__c</fullName>
        <label>Benefits Saving Amount Achieved (k€)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefits_Saving_Amount_Planned__c</fullName>
        <label>Benefits Saving Amount Planned (k€)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefitting_BL__c</fullName>
        <label>Benefitting Project BL (Level 3 Org)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefitting_BU__c</fullName>
        <label>Benefitting Project BU</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefitting_Project_BL_Level_4_Org__c</fullName>
        <label>Benefitting Project BL Level 4 Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoPQ_Type__c</fullName>
        <label>Financial Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI3DI5_Flag__c</fullName>
        <label>DI3DI5 Flag</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DI_State__c</fullName>
        <label>DI State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Parent_ID__c</fullName>
        <label>Entry Parent ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Type__c</fullName>
        <label>Entry Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Financial_Savings_k__c</fullName>
        <formula>IF(ISBLANK(Future_Saving_Amount__c),0,IF( Benefit_Type__c = &apos;Financial Savings&apos;, Round(Value(Future_Saving_Amount__c),2), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Financial Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Operational_Savings_k__c</fullName>
        <formula>IF(ISBLANK(Future_Saving_Amount__c),0,IF( Benefit_Type__c = &apos;Operational Savings&apos;, Round(Value(Future_Saving_Amount__c),2), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Operational Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Projected_Savings_k__c</fullName>
        <formula>IF(ISBLANK(Future_Saving_Amount__c),0,IF( Benefit_Type__c = &apos;Projected Revenue&apos;, Round(Value(Future_Saving_Amount__c),2), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Projected Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Realized_Savings_k__c</fullName>
        <formula>IF(ISBLANK(Future_Saving_Amount__c),0,IF( Benefit_Type__c = &apos;Realized Revenue&apos;, Round(Value(Future_Saving_Amount__c),2), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Realized Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Saving_Amount__c</fullName>
        <label>Future Saving Amount</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Tracking_For_Initial_Line_Items__c</fullName>
        <label>Line Items Initial</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>History_Tracking_For_Line_Items__c</fullName>
        <label>Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improvement_Measure__c</fullName>
        <label>Improvement Measure (KPI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improvment_Amount__c</fullName>
        <label>Improvment Amount</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Planned_Financial_Savings_k__c</fullName>
        <formula>IF( Benefit_Type__c = &apos;Financial Savings&apos;, Round(Value( Improvment_Amount__c ),2), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Financial Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Operational_Savings_k__c</fullName>
        <formula>IF( Benefit_Type__c = &apos;Operational Savings&apos;, Round(Value( Improvment_Amount__c ),2), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Operational Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Projected_Savings_k__c</fullName>
        <formula>IF( Benefit_Type__c = &apos;Projected Revenue&apos;, Round(Value( Improvment_Amount__c ),2), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Projected Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Realized_Savings_k__c</fullName>
        <formula>IF( Benefit_Type__c = &apos;Realized Revenue&apos;, Round(Value( Improvment_Amount__c ),2), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned Realized Savings (k€)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <label>Portfolio Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lead_BL_Level_3_Org__c</fullName>
        <label>Project Lead BL Level 3 Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lead_BL_Level_4_Org__c</fullName>
        <label>Project Lead BL Level 4 Org</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lead_BU__c</fullName>
        <label>Project Lead BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIPP_Project_ID__c</fullName>
        <label>QIPP Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QI_Methodology__c</fullName>
        <label>Methodology</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarters__c</fullName>
        <label>Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2033</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2034</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2035</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>QIPP – Benefit Report</label>
    <nameField>
        <label>QIPP - BU Reporting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QIPP – Benefit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>